add chad image and footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
         </li>
       </ul>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section class="intro">
+        <h1>My New Website</h1>
+        <figure>
+          <img
+            class="chad"
+            src="./assets/images/chad.jpg"
+            alt="gigachad picture"
+          />
+          <figcaption>This is a chad</figcaption>
+        </figure>
+      </section>
+    </main>
+    <footer>&copy2022 My New Website Productions</footer>
   </body>
 </html>
