add contact section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
           <figcaption>This is a chad</figcaption>
         </figure>
       </section>
+      <section class="contact">
+        <h2>Contact Me</h2>
+        <form action="">
+          <label for="name">Name:</label>
+          <input type="text" />
+          <label for="email">Email:</label>
+          <input type="text" />
+          <input type="submit" value="submit" />
+        </form>
+      </section>
     </main>
     <footer>&copy2022 My New Website Productions</footer>
   </body>
